fix spacing for headers in computer modern font

--- a/_sass/minima/_github-markdown.scss
+++ b/_sass/minima/_github-markdown.scss
@@ -127,6 +127,8 @@
   margin-top: 15px;
   margin-bottom: 15px;
   line-height: 1.1;
+  /* Compensate for computer modern font spacing */
+  letter-spacing: -0.045em;
 }
 
 .markdown-body h1 {
